--- a/src/app/cars/pages/edit/edit.component.html
+++ b/src/app/cars/pages/edit/edit.component.html
@@ -21,7 +21,7 @@
       <form [formGroup]="editForm">
         <mat-form-field>
           <mat-label>Modelo</mat-label>
-          <input matInput type="text" formControlName="name" />
+          <input matInput type="text" formControlName="name" ngDefaultControl/>
           <mat-error
             *ngIf="globalMethodsService.getHasRequiredError(editForm, 'name')"
             >{{ globalMethodsService.getMessageIsRequired() }}</mat-error
@@ -29,7 +29,7 @@
         </mat-form-field>
         <mat-form-field>
           <mat-label>Marca</mat-label>
-          <mat-select formControlName="brand">
+          <mat-select formControlName="brand" ngDefaultControl>
             <mat-option *ngFor="let brand of brands" [value]="brand.name">
               {{ brand.name }}
             </mat-option>
@@ -41,7 +41,7 @@
         </mat-form-field>
         <mat-form-field>
           <mat-label>Tipo de vehículo</mat-label>
-          <mat-select formControlName="type">
+          <mat-select formControlName="type" ngDefaultControl>
             <mat-option *ngFor="let type of types" [value]="type.name">
               {{ type.name }}
             </mat-option>
@@ -53,7 +53,7 @@
         </mat-form-field>
         <mat-form-field>
           <mat-label>Foto Url</mat-label>
-          <input matInput type="text" formControlName="img" />
+          <input matInput type="text" formControlName="img" ngDefaultControl/>
           <mat-error
             *ngIf="globalMethodsService.getHasRequiredError(editForm, 'img')"
             >{{ globalMethodsService.getMessageIsRequired() }}</mat-error
@@ -61,7 +61,7 @@
         </mat-form-field>
         <mat-form-field>
           <mat-label>Colores disponibles</mat-label>
-          <mat-select formControlName="availableColors" multiple>
+          <mat-select formControlName="availableColors" multiple ngDefaultControl>
             <mat-option *ngFor="let color of colors" [value]="color.name">{{
               color.name
             }}</mat-option>
@@ -82,6 +82,7 @@
             matInput
             [matDatepicker]="picker1"
             formControlName="elaborationDate"
+            ngDefaultControl
           />
           <mat-hint>MM/DD/YYYY</mat-hint>
           <mat-datepicker-toggle
