--- a/src/app/cars/components/car-card/car-card.component.html
+++ b/src/app/cars/components/car-card/car-card.component.html
@@ -1,31 +1,31 @@
 <mat-card class="col-12">
   <mat-card-header class="background accent">
-    <div class="row w-100 justify-content-between">
-      <div class="col-3 text-center">
+    <div class="row width-of-header-card justify-content-around">
+      <div class="col text-center">
         <mat-card-title>{{ car?.name }}</mat-card-title>
         <mat-card-subtitle>{{ car?.brand }}</mat-card-subtitle>
       </div>
-      <div class="col-4 text-center">
+      <div *ngIf="getScreenWidth > 500" class="col text-center">
         <mat-card-title>Colores</mat-card-title>
         <mat-card-subtitle>(Puedes esojer a tu gusto)</mat-card-subtitle>
       </div>
-      <div class="col-4 text-center">
+      <div *ngIf="getScreenWidth > 768"  class="col text-center">
         <mat-card-title>Fecha de elaboración</mat-card-title>
         <mat-card-subtitle>(Año del modelo)</mat-card-subtitle>
       </div>
     </div>
   </mat-card-header>
   <mat-card-content>
-    <div class="row w-100 justify-content-around mt-4 mb-1">
-      <div class="col-3">
+    <div class="row width-of-content-card justify-content-between mt-4 mb-1">
+      <div class="col">
         <img src="{{car?.img}}" />
       </div>
-      <div class="col-5 align-self-center text-center">
+      <div *ngIf="getScreenWidth > 500" class="col align-self-center text-center">
         <app-show-colors
               [colors]="car?.availableColors || []"
             ></app-show-colors>
       </div>
-      <div class="col-3 align-self-center text-center">
+      <div *ngIf="getScreenWidth > 768" class="col align-self-center text-center">
         <p>
           <mat-icon>calendar_month</mat-icon>
           <span class="v-center p-1">{{(car?.elaborationDate || '') | stringDate: 'date'}}</span>
