--- a/src/app/cars/components/car-card/car-card.component.scss
+++ b/src/app/cars/components/car-card/car-card.component.scss
@@ -21,6 +21,14 @@ img {
   width: 100%;
 }
 
+.width-of-header-card {
+  width: 94%;
+}
+
+.width-of-content-card {
+  width: 98%;
+}
+
 .separate {
     padding-left: 5px !important;
 }
