--- a/src/app/cars/pages/list/list.component.html
+++ b/src/app/cars/pages/list/list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col">
-    <h1>Listado de Autos</h1>
+    <h1>{{title}}</h1>
   </div>
   <div class="col text-end">
     <button mat-button [matMenuTriggerFor]="order">Ordenar por</button>
